; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_monitor.c_monitor_change_mem.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_monitor.c_monitor_change_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MEMORY_attrib = common dso_local global i64* null, align 8
@MEMORY_HARDWARE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @monitor_change_mem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @monitor_change_mem(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @get_hex(i32* %4)
  br label %6

6:                                                ; preds = %59, %1
  %7 = call i64 @get_hex(i32* %3)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %60

9:                                                ; preds = %6
  %10 = load i64*, i64** @MEMORY_attrib, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = load i32, i32* %11, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i64, i64* %10, i64 %13
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @MEMORY_HARDWARE, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %23

18:                                               ; preds = %9
  %19 = load i32*, i32** %2, align 8
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @MEMORY_HwPutByte(i32 %20, i32 %21)
  br label %28

23:                                               ; preds = %9
  %24 = load i32*, i32** %2, align 8
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @MEMORY_dPutByte(i32 %25, i32 %26)
  br label %28

28:                                               ; preds = %23, %18
  %29 = load i32*, i32** %2, align 8
  %30 = load i32, i32* %29, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %29, align 4
  %32 = load i32, i32* %3, align 4
  %33 = icmp sgt i32 %32, 255
  br i1 %33, label %34, label %59

34:                                               ; preds = %28
  %35 = load i64*, i64** @MEMORY_attrib, align 8
  %36 = load i32*, i32** %2, align 8
  %37 = load i32, i32* %36, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i64, i64* %35, i64 %38
  %40 = load i64, i64* %39, align 8
  %41 = load i64, i64* @MEMORY_HARDWARE, align 8
  %42 = icmp eq i64 %40, %41
  br i1 %42, label %43, label %49

43:                                               ; preds = %34
  %44 = load i32*, i32** %2, align 8
  %45 = load i32, i32* %44, align 4
  %46 = load i32, i32* %3, align 4
  %47 = ashr i32 %46, 8
  %48 = call i32 @MEMORY_HwPutByte(i32 %45, i32 %47)
  br label %55

49:                                               ; preds = %34
  %50 = load i32*, i32** %2, align 8
  %51 = load i32, i32* %50, align 4
  %52 = load i32, i32* %3, align 4
  %53 = ashr i32 %52, 8
  %54 = call i32 @MEMORY_dPutByte(i32 %51, i32 %53)
  br label %55

55:                                               ; preds = %49, %43
  %56 = load i32*, i32** %2, align 8
  %57 = load i32, i32* %56, align 4
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* %56, align 4
  br label %59

59:                                               ; preds = %55, %28
  br label %6

60:                                               ; preds = %6
  ret void
}

declare dso_local i64 @get_hex(i32*) #1

declare dso_local i32 @MEMORY_HwPutByte(i32, i32) #1

declare dso_local i32 @MEMORY_dPutByte(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
